--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.2.1",
-    "lodash": "^4.17.5",
-    "mongoose": "^5.0.11",
-    "morgan": "^1.9.0"
+    "lodash": "^4.17.10",
+    "mongoose": "^5.0.16",
+    "morgan": "^1.9.0",
+    "npm": "^6.0.0"
   }
 }
